docs: removido chaves

--- a/projeto-drone-front/src/index.html
+++ b/projeto-drone-front/src/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBV8HI0FfMpW6_gRrTHQZ6BL5dWsWR00y0"
+      src="https://maps.googleapis.com/maps/api/js?key=<SUA_CHAVE>"
       type="text/javascript"
     ></script>
     <script>
